# Stock-market-dashboard

./: .gitignore  CLAUDE.md  PULSE-INTEGRATION.md  README.md  pyproject.toml
.github/workflows/: build-dashboard.yml  ci.yml  daily-gmi.yml  monthly-breadth-refresh.yml
deploy/cloudflare/: README.md  wrangler.jsonc
raw/: url_map.json
scripts/: batch8_update.py  build_gmi_playground.py  build_market_regime.py  build_wiki_html.py  check_st_trend_rule.py  scrub_site_for_cf.py  stage_all.py
src/ww/: __init__.py  cli.py  paths.py  stats.py
tests/: conftest.py  test_clean.py  test_cli.py  test_heuristics.py  test_index.py  test_ingest.py  test_lint.py  test_paths.py  test_stats.py  test_timeline.py  test_wp_api.py
tests/backtest/: test_engine.py  test_gate.py  test_metrics.py  test_run.py
tests/breadth/: test_fetch.py  test_series.py  test_symbols.py  test_validate.py
tests/fixtures/: wp_api_page1.json  wp_post_sample.html
tests/indicators/: test_breadth_provider.py  test_gmi.py  test_green_line.py  test_guppy.py  test_ma_stages.py  test_provider.py  test_qqq_timing.py  test_t2108.py  test_wgb.py
tests/search/: test_bm25.py  test_chunk.py  test_index.py
web/: pulse.html
wiki/: index.md  log.md  overview.md
wiki/_templates/: concept-page.md  entity-page.md  playbook-page.md  source-summary.md
wiki/history/: timeline.md  track-record.md  trend-flip-log.md
wiki/methodology/: backtest-timing-overlay.md  glossary.md  gmi.md  green-line-breakouts.md  moving-average-rules.md  qqq-short-term-timing.md  risk-and-cash.md  stock-selection.md  t2108.md
(+127 files in other folders)
