[project]
name = "wishing-wealth-wiki"
version = "0.1.0"
description = "An LLM-maintained wiki of Dr. Eric Wish's Wishing Wealth Blog methodology"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "markdownify>=0.13",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.scripts]
ww = "ww.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ww"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
